<resources>
    <string name="app_name">Kalkulatorek</string>
    <string name="c">C</string>
    <string name="ce">CE</string>
    <string name="x">X</string>
    <string name="_7">7</string>
    <string name="znakDzielenia">/</string>
    <string name="znakProcent">%</string>
    <string name="button">Button</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="znakOdejmowania">-</string>
    <string name="znakDodawania">+</string>
    <string name="znakRownania">=</string>
    <string name="_0">0</string>
    <string name="przecinek">,</string>
    <string name="sqrt">SQRT</string>
    <string name="pierwiastek">√</string>
</resources>