<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">



    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="4">


        <Button
            android:id="@+id/bC"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/c"
            android:textSize="25sp"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/bCE"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/ce"
            android:textSize="25sp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/bProc"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/znakProcent"
            android:textSize="25sp"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/bDziel"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/znakDzielenia"
            android:textSize="25sp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/black"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/b7"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/_7"
            android:textSize="25sp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/black"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/b8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/cardview_dark_background"
            android:text="@string/_8"
            android:textSize="25sp"
            app:backgroundTint="@color/cardview_dark_background"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/b9"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/_9"
            android:textSize="25sp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/black"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/bMnoz"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/x"
            android:textSize="25sp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/black"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/b4"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/_4"
            android:textSize="25sp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/black"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/b5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/_5"
            android:textSize="25sp"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/b6"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/_6"
            android:textSize="25sp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/black"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/bOdej"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/znakOdejmowania"
            android:textSize="25sp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/black"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/b1"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/_1"
            android:textSize="25sp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/black"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/b2"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/_2"
            android:textSize="25sp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
             />

        <Button
            android:id="@+id/b3"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/_3"
            android:textSize="25sp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/white"
            />

        <Button
            android:id="@+id/bDod"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/znakDodawania"
            android:textSize="25sp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/black"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/bPierwiastek"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/pierwiastek"
            android:textSize="25sp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/black"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/b0"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/_0"
            android:textSize="25sp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/bPrzecinek"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/przecinek"
            android:textSize="25sp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/black"
            app:backgroundTint="@color/cardview_dark_background" />

        <Button
            android:id="@+id/bRowne"
            android:layout_height="100dp"
            android:layout_width="wrap_content"
            android:text="@string/znakRownania"
            android:textSize="25sp"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/black"
            app:backgroundTint="@color/mine" />





    </GridLayout>

</RelativeLayout>